# INTERNET-CUANTUN-NETWORK-IBM-CLOUD-

./: LICENSE.md  README.md  quantum_terminal.py
Cuantun net work IBM/: Dockerfile.api  Makefile.mak  README.md  deploy_ibm_cloud.sh  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
Cuantun net work IBM/SRC/: __init__.py  app.py
Cuantun net work IBM/SRC/API/: init.py
Cuantun net work IBM/SRC/Core/: config.py
Cuantun net work IBM/SRC/Data/: init.py  loader.py
Cuantun net work IBM/SRC/ml/: pipeline.py
Cuantun net work IBM/SRC/quantum/: circuits.py  embedding.py  expectations.py  init.py
Cuantun net work IBM/SRC/viz/: plots.py
Cuantun net work IBM/config/: default.yaml
Cuantun net work IBM/web/: Dockerfile.web.dockerfile
INTERNET-CUANTUN-NETWORK-IBM-CLOUD--main/: requirements.txt
INTERNET-CUANTUN-NETWORK-IBM-CLOUD--main/config/: default.yaml
INTERNET-CUANTUN-NETWORK-IBM-CLOUD--main/eeg-quantum-net/src/quantum_core/: __init__.py  circuits.py  crypto.py
INTERNET-CUANTUN-NETWORK-IBM-CLOUD--main/eeg-quantum-net/src/terminal/: __init__.py  cli.py  display.py  metrics.py
INTERNET-CUANTUN-NETWORK-IBM-CLOUD--main/scripts/: quantum_terminal.py  run_terminal.ps1  run_terminal.sh
